metrics-store/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.wasm
              config:
                config:
                  name: 'metrics_collector'
                  root_id: 'metrics_collector'
                  vm_config:
                    runtime: 'envoy.wasm.runtime.v8'
                    vm_id: 'metrics_collector'
                    code:
                      local:
                        filename: '/etc/metrics_collector.wasm'
                    allow_precompiled: true
            - name: envoy.tcp_proxy
              config:
                stat_prefix: ingress_tcp
                cluster: web_service
    - name: staticreply
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8099
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: '/'
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.router
                    config: {}
  clusters:
    - name: web_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: web_service
            port_value: 5678
    - name: wasm_upstream
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: wasm_upstream
            port_value: 8080
wasm_service:
  - config:
      name: envoy.filters.http.wasm
      root_id: 'singleton'
      vm_config:
        runtime: 'envoy.wasm.runtime.v8'
        vm_id: 'singleton'
        code:
          local:
            filename: '/etc/singleton_queue.wasm'
        allow_precompiled: true
    singleton: true
admin:
  access_log_path: '/dev/null'
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
